# Python-Clean-Architecture-Boilerplate

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  dependency-update.yml  performance.yml  security.yml
docs/: docker.md
src/your_domain/application/: event_bus.py  uow.py
src/your_domain/application/interfaces/: auth_service.py  email_service.py  user_mgmt.py
src/your_domain/application/use_cases/: authenticate_user.py  delete_user.py  register_user.py  reset_user_password.py  update_user_profile.py
src/your_domain/domain/: models.py  repositories.py  services.py
src/your_domain/domain/entities/: user.py
src/your_domain/domain/events/: user_registered.py
src/your_domain/domain/services/: auth_service.py  email_service.py  user_registration.py
src/your_domain/domain/value_objects/: email.py  password_hash.py
src/your_domain/infrastructure/: cqrs.py  database.py
src/your_domain/infrastructure/repositories/: user_mgmt.py
src/your_domain/presentation/: dependencies.py
tests/integration/: test_docs_generation.py
