[project]
name = "project-boilerplate"
version = "0.1.0"
description = "Clean Architecture Boilerplate"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0"
]

[project.optional-dependencies]
dev = [
    "uv>=0.1.0",
    "ruff>=0.0.280",
    "mypy>=1.4.1",
    "pytest>=7.4.0",
    "pytest-bdd>=7.1.1",
    "pytest-cov>=4.1.0",
    "mkdocs-material>=9.1.0",
    "mkdocstrings[python]>=0.22.0",
    "docstring-gen>=0.9.0",
    "yamllint>=1.32.0",
    "yamlfmt>=0.9.0",
    "interrogate>=1.5.0",
    "types-requests>=2.31.0.1"
]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "N", "UP", "ANN", "S", "B", "C4", "FBT", "ISC", "RUF"]
ignore = ["ANN101", "D203"]

[tool.mypy]
strict = true
disallow_any_generics = true
warn_return_any = true
warn_unused_configs = true

[tool.yamlfmt]
formatter = "basic"
include = ["*.yaml", "*.yml"]
exclude = [".github/**/*"]

[build-system]
requires = ["uv>=0.1.0"]
build-backend = "uv.installer"
